common: match artifact names to its type
To be more clear where each artifact is from,
they shall be nameed following convention:
'_*' - most important artifact of a workflow
'common-cijoe-*' - cijoe artifacts from common tests
'common-job-*' - artifacts of each job from common tests

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -110,7 +110,7 @@ jobs:
       if: always()
       with:
         path: ci/cijoe/cijoe-output
-        name: cloudinit-report
+        name: cijoe-cloudinit-report
 
     - name: Change image format and compress
       run: |
