--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -52,12 +52,12 @@ jobs:
         fetch-depth: '0'
         fetch-tags: 'true'
     - name: Create abi tarball
-      run: tar -C './spdk-abi' -czf abi.tar.gz .
+      run: tar -C './spdk-abi' -czf spdk-abi.tar.gz .
     - name: Upload the abi tarball as an artifact
       uses: actions/upload-artifact@v4.4.0
       with:
-        name: abi
-        path: abi.tar.gz
+        name: repo-spdk-abi
+        path: spdk-abi.tar.gz
     outputs:
       is_called: ${{ env.is_called }}
 
