build_image: clean up and rename VM artifacts
Step for uploading VM image should not run, if prior steps
didn't succeeded.
cijoe output directory was already uploaded as prior step,
don't do that again.

Images for VMs shall follow the vm-image-* scheme.

Artifact and cache name shall match, so that later down
the line we might want to play with patterns to select
images even down to SPDK commit hash.
qcow2 file name do not have to match.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -119,19 +119,14 @@ jobs:
 
     - name: Store Qcow2 build artifacts
       uses: actions/upload-artifact@v4.4.0
-      if: always()
       with:
-        name: qcow2-build-artifacts
+        name: vm-image-fedora_40_x86_64
         compression-level: 0
-        overwrite: true
-        path: |
-          ci/cijoe/cijoe-output
-          fedora_40_x86_64.qcow2
+        path: fedora_40_x86_64.qcow2
 
     - name: Cache qcow2 image
       id: cache-qcow2
       uses: actions/cache/save@v4
       with:
-        path: |
-          fedora_40_x86_64.qcow2
-        key: fedora_40_x86_64
+        path: fedora_40_x86_64.qcow2
+        key: vm-image-fedora_40_x86_64
