workflows: add more descriptive names
Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -24,7 +24,7 @@
 # 2. Collect artifacts produced during execution.
 # 3. Integrate with third-party services, such as S3.
 #
-name: build_qcow2
+name: SPDK-CI build VM image
 
 on:
   workflow_dispatch:
