--- a/.github/workflows/selftest.yml
+++ b/.github/workflows/selftest.yml
@@ -5,7 +5,7 @@
 # The hooks are configured in .pre-commit-config.yaml. While integration with
 # the Git repository is possible, it is **not** required; pre-commit is simply
 # used as a convenient way to run these checks.
-name: selftest
+name: SPDK-CI selftest
 
 on:
   push:
