--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -17,5 +17,14 @@ jobs:
     with:
       # "Client payload" is all of the information Gerrit webhooks sends out.
       client_payload: ${{ toJson(github.event.client_payload) }}
-    secrets: inherit
   # Add more jobs below if needed.
+
+
+  # Summary should be last job, please make sure to include yours in 'needs'.
+  summary:
+    if: ${{ always() }}
+    needs: [common-tests]
+    uses: ./.github/workflows/summary.yml
+    with:
+      client_payload: ${{ toJson(github.event.client_payload) }}
+    secrets: inherit
