common: disable ASAN in TCP jobs
ASAN was enabled because it seemed to work, turns
out that there is an intermittent failure - #3629.

Previous CI had it disabled anyway, so it should not
be a regression to keep it the same way. See #3615.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/cijoe/configs/autorun_configs/nvmf-tcp-uring-vm-autotest.conf
+++ b/cijoe/configs/autorun_configs/nvmf-tcp-uring-vm-autotest.conf
@@ -7,5 +7,6 @@ SPDK_TEST_VFIOUSER=1
 SPDK_TEST_USDT=1
 SPDK_TEST_NVMF_MDNS=1
 SPDK_RUN_UBSAN=1
-SPDK_RUN_ASAN=1
+# Disabled due to #3629
+SPDK_RUN_ASAN=0
 NET_TYPE=virt
