--- a/cijoe/configs/autorun_configs/nvmf-tcp-vm-autotest.conf
+++ b/cijoe/configs/autorun_configs/nvmf-tcp-vm-autotest.conf
@@ -7,5 +7,6 @@ SPDK_TEST_VFIOUSER=1
 SPDK_TEST_USDT=1
 SPDK_TEST_NVMF_MDNS=1
 SPDK_RUN_UBSAN=1
-SPDK_RUN_ASAN=1
+# Disabled due to #3629
+SPDK_RUN_ASAN=0
 NET_TYPE=virt
