summary: pass results from other workflows
Since the summary workflow was moved out from common tests,
the result passing needed to be changed.

While here, massaged the message.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -27,4 +27,5 @@ jobs:
     uses: ./.github/workflows/summary.yml
     with:
       client_payload: ${{ toJson(github.event.client_payload) }}
+      result: ${{ needs.common.result }}
     secrets: inherit
