refactor(gha,cijoe): move wait into cijoe-workflow
Signed-off-by: Simon A. F. Lund <os@safl.dk>

--- a/cijoe/workflows/build_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_qcow2_using_qemu.yaml
@@ -84,3 +84,9 @@ steps:
   run: |
     sync
     systemctl poweroff
+
+- name: guest_wait
+  uses: qemu.guest_wait_for_termination
+  with:
+    guest_name: generic-bios-kvm-x86_64
+    timeout: 60
