refactor(cijoe/build_qcow2): rename steps
* rename 'guest_check' to 'guest_growparts'
* Rename 'pkgdep_and_autotest_setup' to 'guest_autotest_setup'

Signed-off-by: Simon A. F. Lund <os@safl.dk>

--- a/cijoe/workflows/build_qcow2_using_qemu.yaml
+++ b/cijoe/workflows/build_qcow2_using_qemu.yaml
@@ -42,7 +42,7 @@ steps:
   with:
     guest_name: generic-bios-kvm-x86_64
 
-- name: guest_check
+- name: guest_growparts
   run: |
     hostname
     uname -a
@@ -73,7 +73,7 @@ steps:
     tar xzf /tmp/spdk.tar.gz -C /tmp/spdk
     rm /tmp/spdk.tar.gz
 
-- name: pkgdep_and_autotest_setup
+- name: guest_autotest_setup
   run: |
     /tmp/spdk/scripts/pkgdep.sh -a
     mkdir /tmp/git_repos
