feat(autorun_in_qemu): best-effort guest shutdown to avoid interference
Intermittently, systemctl poweroff fails to shut down the guest
gracefully.

In ephemeral environments like GitHub-hosted runners, graceful shutdown
isn’t strictly necessary, as artifacts are already collected and the
guest won't be reused.

However, in self-hosted environments, a lingering guest process can
interfere with future job runs. This change attempts a graceful shutdown
without failing the job if it doesn't succeed.

Signed-off-by: Simon A. F. Lund <os@safl.dk>

--- a/cijoe/workflows/autorun_in_qemu.yaml
+++ b/cijoe/workflows/autorun_in_qemu.yaml
@@ -122,4 +122,4 @@ steps:
 
 - name: guest_shutdown
   run: |
-    systemctl poweroff
+    systemctl poweroff || systemctl poweroff --force --force || true
