gerrit: only run summary if job was not cancelled
always() has a drawback of not being able to cancel
a running workflow, without such block executing.

Changing the condition for summary job, will make the rest
of the workflow cancellable.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -30,7 +30,7 @@ jobs:
 
   # Summary should be last job, please make sure to include yours in 'needs'.
   summary:
-    if: ${{ always() }}
+    if: ${{ !cancelled() }}
     needs:
     - common
     - hpe
