--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -14,17 +14,29 @@ on:
     - wip-state-changed
     - private-state-changed
 
+env:
+  client_payload: ${{ github.event.client_payload || '' }}
+
 jobs:
+  env_vars: # Workaround for https://github.com/actions/runner/issues/2372
+    runs-on: ubuntu-latest
+    outputs:
+      client_payload: ${{ env.client_payload }}
+    steps:
+    - run: echo "Passing workflow env vars to reusable workflows"
+
   common:
+    needs: env_vars
     uses: ./.github/workflows/spdk-common-tests.yml
     with:
       # "Client payload" is all of the information Gerrit webhooks sends out.
-      client_payload: ${{ toJson(github.event.client_payload) }}
+      client_payload: ${{ needs.env_vars.outputs.client_payload }}
 
   hpe:
+    needs: env_vars
     uses: ./.github/workflows/nvmf-rdma.yml
     with:
-      client_payload: ${{ toJson(github.event.client_payload) }}
+      client_payload: ${{ needs.env_vars.outputs.client_payload }}
   # Add more jobs below if needed.
 
 
@@ -32,10 +44,11 @@ jobs:
   summary:
     if: ${{ !cancelled() }}
     needs:
+    - env_vars
     - common
     - hpe
     uses: ./.github/workflows/summary.yml
     with:
-      client_payload: ${{ toJson(github.event.client_payload) }}
+      client_payload: ${{ needs.env_vars.outputs.client_payload }}
       result: ${{ needs.common.result }}
     secrets: inherit
