gerrit: add client_payload as input to workflow_dispatch
This way it will be possible to provide a custom JSON
for testing purpose when executing a workflow_dispatch.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -7,6 +7,11 @@ on:
     - '.github/workflows/selftest.yml'
     - '.github/workflows/build_qcow2.yml'
   workflow_dispatch:
+    inputs:
+      client_payload:
+        required: false
+        type: string
+        default: ''
   repository_dispatch:
     types:
     - per-patch-event
@@ -15,7 +20,7 @@ on:
     - private-state-changed
 
 env:
-  client_payload: ${{ github.event.client_payload || '' }}
+  client_payload: ${{ github.event.client_payload || inputs.client_payload || '' }}
 
 jobs:
   env_vars: # Workaround for https://github.com/actions/runner/issues/2372
