fix(autorun_in_qemu): conditionally skip guest shutdown
The QEMU guest shutdown is now a separate step that runs only on
self-hosted runners and via `act`.

This change addresses intermittent failures during graceful shutdowns
(e.g., `systemctl poweroff`) on GitHub-hosted runners, which were
causing pipeline failures. On self-hosted runners and when using `act`,
the shutdown step is still necessary to prevent stray QEMU processes,
which could lead to more severe issues than the occasional shutdown
error.

Signed-off-by: Simon A. F. Lund <os@safl.dk>

--- a/.github/workflows/spdk-common-tests.yml
+++ b/.github/workflows/spdk-common-tests.yml
@@ -171,9 +171,18 @@ jobs:
       if: always()
       run: |
         cd ci/cijoe
-        cijoe workflows/autorun_in_qemu.yaml output_listing retrieve_autorun_output guest_shutdown \
+        cijoe workflows/autorun_in_qemu.yaml output_listing retrieve_autorun_output \
         --config configs/qemuhost-with-guest-fedora-40.toml \
         --output report_${{ matrix.workflow }}_cleanup \
+        --monitor
+
+    - name: qemu-guest, shutdown
+      if: contains(runner.labels, 'self-hosted') || env.ACT == 'true'
+      run: |
+        cd ci/cijoe
+        cijoe workflows/autorun_in_qemu.yaml guest_shutdown \
+        --config configs/qemuhost-with-guest-fedora-40.toml \
+        --output report_${{ matrix.workflow }}_guest_shutdown \
         --monitor
 
     - name: Upload Artifacts
