--- a/.github/workflows/summary.yml
+++ b/.github/workflows/summary.yml
@@ -81,7 +81,7 @@ jobs:
             message="Build successful. "
         fi
 
-        message+="Results: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}"
+        message+="Results: [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
         echo "vote=$vote" >> $GITHUB_OUTPUT
         echo "message=$message" >> $GITHUB_OUTPUT
         echo "$message" >> $GITHUB_STEP_SUMMARY
