summary: add attempt number to the url
When GitHub triggers a workflow it gets a specific run_id,
which is unique for the repository. Most runs require just
single attempt, but a failed one can be retriggered manualy
or later in the series via comment on Gerrit.
This results in creating new attempt that uses the same run_id.

Accessing url without specifying a run attempt, just points
to the latest. In order to avoid confusion, be specific.
This avoids old links for failed builds, pointing to
a passing build after false positive comment.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/summary.yml
+++ b/.github/workflows/summary.yml
@@ -81,7 +81,7 @@ jobs:
             message="Build successful. "
         fi
 
-        message+="Results: [${{ github.run_id }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"
+        message+="Results: [${{ github.run_id }}/${{ github.run_attempt }}](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }})"
         echo "vote=$vote" >> $GITHUB_OUTPUT
         echo "message=$message" >> $GITHUB_OUTPUT
         echo "$message" >> $GITHUB_STEP_SUMMARY
