--- a/.github/workflows/gerrit-false-positives-handler.yml
+++ b/.github/workflows/gerrit-false-positives-handler.yml
@@ -80,7 +80,7 @@ jobs:
 
         # False positive should be used only on changes that already have a negative Verified vote
         verified="$(jq -r '.labels.Verified.all[] | select(.username=="${{ secrets.GERRIT_BOT_USER }}").value' change.json)"
-        if [[ "$verified" -eq "-1" ]]; then
+        if [[ "$verified" != "-1" ]]; then
           echo "Ignore. Comment posted with no negative vote from CI."
           exit 0
         fi
