infra: bring back mergable_changes service (text version)
Bring back "mergable changes" which was available in
previous CI, under Intel umbrella. This script queries
Gerrit for +2CR/+1 Verified changes, makes additional checks
like:
- is there a merge conflict flag for the change
- is there a -1CR vote beside +2CR votes
- are any parents of the change (if it's a series) not
  mergable
and presents the information organized in tables.

Text version with ASCII tables for now, but with
plans to bring back HTML version in nearby future.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -31,9 +31,28 @@ services:
     networks:
     - gerrit
 
+  mergable_changes:
+    image: mergable_changes:latest
+    build:
+      context: ./mergable_changes
+      dockerfile: Dockerfile
+    container_name: mergable_changes
+    restart: always
+    environment:
+    - OUTPUT_FILE=${OUTPUT_FILE}
+    - GERRIT_USER_NAME=${GERRIT_USER_NAME}
+    - GERRIT_PASSWORD=${GERRIT_PASSWORD}
+    depends_on:
+    - gerrit
+    volumes:
+    - mergable_changes_logs:/var/log
+    networks:
+    - gerrit
+
 volumes:
   gerrit_data:
   forwarder_logs:
+  mergable_changes_logs:
 
 networks:
   gerrit:
