.github/scripts: Add shellcheck for pre-commit checks
By default, don't use any excludes, be as strict as possible.
Directives may be disabled for specific parts of the code in case
of a reasonable justification.

Signed-off-by: Michal Berger <michal.berger@nutanix.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -43,3 +43,14 @@ repos:
     name: Python-lint-mypy
     additional_dependencies:
     - types-requests
+
+- repo: https://github.com/shellcheck-py/shellcheck-py
+  rev: v0.10.0.1
+  hooks:
+  - id: shellcheck
+    name: sh-shellcheck
+    args:
+    - '-fgcc'
+    - '-sbash'
+    types_or: [file, bash]
+    files: \.(sh|bash)$
