infra: use volume for mergable changes output
Provide a Docker volume for saving the output.
This will be useful when sharing the output with
different containers, e.g when exposing the file
by web server.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -46,6 +46,7 @@ services:
     - gerrit
     volumes:
     - mergable_changes_logs:/var/log
+    - mergable_changes_out:/output
     networks:
     - gerrit
 
@@ -53,6 +54,7 @@ volumes:
   gerrit_data:
   forwarder_logs:
   mergable_changes_logs:
+  mergable_changes_out:
 
 networks:
   gerrit:
