gerrit: replace has_review_started with work_in_progress
Incorrect field used. Before this change, patches that had
at any point been marked as ready for review - were tested.

Note that work_in_progress is null when WIP is not set
on a patch.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -52,8 +52,9 @@ jobs:
         | tail -n +2 > change.json
 
         # Do not test any change marked as WIP
-        ready_for_review="$(jq -r '.has_review_started' change.json)"
-        if [[ "$ready_for_review" == "false" ]]; then
+        # .work_in_progress is not set when false
+        work_in_progress="$(jq -r '.work_in_progress' change.json)"
+        if [[ "$work_in_progress" == "true" ]]; then
           gh run cancel ${{ github.run_id }} -R ${{ github.repository }}
         fi
 
