gerrit: gracefully fail check for verified vote
First submissions might as well not have any prior votes,
so gracefully fail the jq. Otherwise following error was observed:

++ jq -r '.labels.Verified.all[] | select(.username=="***").value' change.json
jq: error (at change.json:1): Cannot iterate over null (null)
+ verified=

While here, align both verfified checks.

Signed-off-by: Tomasz Zawadzki <tomasz.zawadzki@nutanix.com>

--- a/.github/workflows/gerrit-webhook-handler.yml
+++ b/.github/workflows/gerrit-webhook-handler.yml
@@ -65,8 +65,8 @@ jobs:
         fi
 
         # Test only changes without a Verified vote already present
-        verified="$(jq -r '.labels.Verified.all[] | select(.username=="${{ secrets.GERRIT_BOT_USER }}").value' change.json)"
-        if [[ "$verified" -ne 0 ]]; then
+        verified=$(jq -r ".labels.Verified.all[]? | select(.username==\"${{ secrets.GERRIT_BOT_USER }}\").value" change.json)
+        if ((verified != 0)); then
           gh run cancel ${{ github.run_id }} -R ${{ github.repository }}
         fi
 
