infra: mergable changes HTML version
Bring back HTML version of "mergable changes" dashboard.
The script will now fill out a template file with all the
same information as used for .txt version.

CSS files not included. For now these must be manually
provisioned on webserver that will serve the page.
CSS files can be obtained from spdk/spdk.github.io
repository.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -40,6 +40,7 @@ services:
     restart: always
     environment:
     - OUTPUT_FILE=${OUTPUT_FILE}
+    - OUTPUT_HTML=${OUTPUT_HTML}
     depends_on:
     - gerrit
     volumes:
