--- a/infra/mergable_changes/Dockerfile
+++ b/infra/mergable_changes/Dockerfile
@@ -3,7 +3,10 @@ FROM python:3.13-alpine
 RUN pip install \
     requests \
     pygerrit2 \
-    prettytable
+    prettytable \
+    jinja2
 COPY mergable_changes.py /app/mergable_changes.py
+COPY template.html /app/template.html
 
-CMD [ "python", "/app/mergable_changes.py"]
+WORKDIR /app
+CMD [ "python", "mergable_changes.py"]
