infra: merge mergable_changes output variables
Merge OUTPUT_FILE and OUTPUT_HTML into one OUTPUT_DIR
and keep actual filenames fixed. Very unlikely that
someone would ever need to change them.

Signed-off-by: Karol Latecki <karol.latecki@nutanix.com>

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -39,8 +39,7 @@ services:
     container_name: mergable_changes
     restart: always
     environment:
-    - OUTPUT_FILE=${OUTPUT_FILE}
-    - OUTPUT_HTML=${OUTPUT_HTML}
+    - OUTPUT_DIR=${OUTPUT_DIR}
     depends_on:
     - gerrit
     volumes:
