--- a/.github/workflows/gerrit-false-positives-handler.yml
+++ b/.github/workflows/gerrit-false-positives-handler.yml
@@ -40,4 +40,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Parse for false positive
-      run: .github/scripts/parse_false_positive_comment.sh
+      run: .github/scripts/parse_false_positive_comment.py
