FreeBSD: add VM image and basic auto test
Signed-off-by: Boris Glimcher <Boris.Glimcher@emc.com>

--- a/.github/workflows/build_docker.yml
+++ b/.github/workflows/build_docker.yml
@@ -41,6 +41,10 @@ on:
       distro:
         description: 'Distribution name_ver to build docker from qcow2 image'
         required: false
+        type: choice
+        options:
+        - fedora_40
+        - freebsd_14
         default: 'fedora_40'
 
 jobs:
