--- a/.github/workflows/build_qcow2.yml
+++ b/.github/workflows/build_qcow2.yml
@@ -36,6 +36,10 @@ on:
       distro:
         description: 'Distribution name_ver to build qcow2 image for'
         required: false
+        type: choice
+        options:
+        - fedora_40
+        - freebsd_14
         default: 'fedora_40'
   push:
     branches: ["main"]
